Integração com a autenticação do firebase nas rotas de usuário
